Add full styling

--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,33 @@ html {
 aside {
   width: 20vw;
   background: linear-gradient(to bottom, black, maroon, indianRed);
-  color: ivory;
+  color: gold;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .game-board {
   background: linear-gradient(to bottom, black, saddleBrown, navajoWhite);
-  width: 50vw;
-  height: auto;
+  width: 55vw;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  height: 15vh;
+  width: 10vw;
+  background-color: black;
+  border: 2.5px solid gold;
+  margin: 0px;
+}
+
+.row {
+display: flex;
 }
 
 body {
@@ -33,11 +53,17 @@ body {
    justify-content: space-between;
  }
 
- section {
+ .central-section {
    display: flex;
+   flex-direction: column;
+ }
+
+ .game-data-info {
+   display: flex;
+   justify-content: space-between;
  }
 
  h2 {
-   color: ivory;
+   color: gold;
 
  }
